10LabDocker/AKS/AWS/dotnet-webapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-webapi
  labels:
    app: dotnet-webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-webapi
  template:
    metadata:
      labels:
        app: dotnet-webapi
    spec:
      containers:
      - name: dotnet-webapi
        image: 711387107629.dkr.ecr.us-east-1.amazonaws.com/ads-dental/dotnet-webapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
