10LabDocker/AKS/AWS/dotnet-webapi-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-webapi-service
  labels:
    app: dotnet-webapi
spec:
  selector:
    app: dotnet-webapi
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
