10LabDocker/AKS/AWS/dotnet-webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-webapi-service
  labels:
    app: dotnet-webapi
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: dotnet-webapi
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
