10LabDocker/AKS/AWS/nginx-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-service
  labels:
    app: nginx-proxy
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-protocol: "tcp"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "traffic-port"
spec:
  selector:
    app: nginx-proxy
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
